@@ -1,5 +1,17 @@
 2019-09-06  Devin Rousso  <drousso@apple.com>
 
+        Web Inspector: CSS Formatter: the closing } of nested @media aren't indented
+        https://bugs.webkit.org/show_bug.cgi?id=201560
+
+        Reviewed by Joseph Pecoraro.
+
+        * UserInterface/Workers/Formatter/FormatterContentBuilder.js:
+        (FormatterContentBuilder.prototype.removeLastNewline):
+        It's possible that there were multiple newlines in a row, so we should update `_startOfLine`
+        to be `true` if the previous line was empty.
+
+2019-09-06  Devin Rousso  <drousso@apple.com>
+
         Web Inspector: CSS Formatter: links to CSS resources don't map to the right line after pretty printing if the line is after a multiline comment
         https://bugs.webkit.org/show_bug.cgi?id=201559
 
