@@ -1,3 +1,13 @@
+2019-09-06  Devin Rousso  <drousso@apple.com>
+
+        Web Inspector: CSS Formatter: the closing } of nested @media aren't indented
+        https://bugs.webkit.org/show_bug.cgi?id=201560
+
+        Reviewed by Joseph Pecoraro.
+
+        * inspector/formatting/resources/css-tests/media-query.css:
+        * inspector/formatting/resources/css-tests/media-query-expected.css:
+
 2019-09-06  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         Incorrect selection rect revealed after pasting images in a contenteditable element
